feat: add GET /users/:id/wallets
